--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
+    "native-base": "^2.13.12",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
