--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-elements": "^2.0.2",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "3.0.2",
-    "react-native-screens": "~2.9.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-screens": "^1.0.0-alpha.23",
     "react-native-swipe-list-view": "^3.1.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
