--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "^1.0.0-alpha.23",
