--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
+    "install": "^0.13.0",
     "native-base": "^2.13.12",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -19,7 +20,9 @@
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-material-tabs": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-swipe-list-view": "^3.1.2",
