--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
