--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
+    "typescript": "^3.9.7",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/jest": "^26.0.9",
+    "@types/react": "^16.9.45",
+    "@types/react-native": "^0.63.6",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-preset-expo": "~8.1.0"
   },
   "private": true
