--- a/package.json
+++ b/package.json
@@ -8,26 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/masked-view": "0.1.10",
     "base-64": "^0.1.0",
-    "expo": "~38.0.1",
+    "expo": "^38.0.0",
     "expo-status-bar": "^1.0.0",
-    "firebase": "^7.15.5",
+    "firebase": "7.9.0",
     "install": "^0.13.0",
     "native-base": "^2.13.12",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-elements": "^2.0.2",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-material-tabs": "^4.1.2",
     "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-responsive-screen": "^1.4.1",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-swipe-list-view": "^3.1.2",
     "react-native-vector-icons": "^6.6.0",
@@ -35,16 +35,16 @@
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
-    "typescript": "^3.9.7",
+    "typescript": "~3.9.5",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/jest": "^26.0.9",
-    "@types/react": "^16.9.45",
-    "@types/react-native": "^0.63.6",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
     "@types/react-test-renderer": "^16.9.3",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
