--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -40,11 +42,28 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@storybook/addon-actions": "^6.0.6",
+    "@storybook/addon-essentials": "^6.0.6",
+    "@storybook/addon-links": "^6.0.6",
+    "@storybook/addon-ondevice-actions": "^5.3.19",
+    "@storybook/react-native": "^5.3.19",
+    "@storybook/react-native-server": "^5.3.19",
     "@types/jest": "^26.0.9",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-test-renderer": "^16.9.3",
-    "babel-preset-expo": "^8.2.3"
+    "babel-loader": "^8.1.0",
+    "babel-preset-expo": "^8.2.3",
+    "react-is": "^16.13.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/__mocks__/globalMock.js"
+    ]
   },
   "private": true
 }
