--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -54,7 +55,9 @@
     "@types/react-test-renderer": "^16.9.3",
     "babel-loader": "^8.1.0",
     "babel-preset-expo": "^8.2.3",
-    "react-is": "^16.13.1"
+    "jest-expo": "^38.0.2",
+    "react-is": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   },
   "jest": {
     "preset": "jest-expo",
