--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/react-redux": "^7.1.9",
     "base-64": "^0.1.0",
     "expo": "^38.0.0",
     "expo-status-bar": "^1.0.0",
@@ -38,6 +40,8 @@
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "typescript": "~3.9.5",
     "yarn": "^1.22.4"
   },
