--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@reduxjs/toolkit": "^1.4.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-redux": "^7.1.9",
     "base-64": "^0.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
     "expo": "^38.0.0",
     "expo-status-bar": "^1.0.0",
     "firebase": "7.9.0",
